crates/unsoundness_checker/tests/snapshots/rules/type_checking_directive_used/markdown_test__snippet_01.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:1:14
  |
1 | res = foo()  # type: ignore
  |              ^^^^^^^^^^^^^^
2 |
3 | res = foo()  # type: ignore[name-defined]
  |
info: rule `type-checking-directive-used` was selected in the configuration file

warning[type-checking-directive-used]: Type checking directive `type: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> main.py:3:14
  |
1 | res = foo()  # type: ignore
2 |
3 | res = foo()  # type: ignore[name-defined]
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file
